--- a/doc/Dockerfile
+++ b/doc/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
     gnupg flex bison gperf build-essential zip curl zlib1g-dev \
     gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev \
     x11proto-core-dev libx11-dev lib32z1-dev ccache libgl1-mesa-dev \
-    libxml2-utils xsltproc unzip bc ninja-build \
+    libxml2-utils xsltproc unzip bc ninja-build simg2img lz4 zstd \
     python3-pyelftools python3-crypto libncurses5 libssl-dev -y && \
     apt-get install --reinstall -y ca-certificates && \
     pip3 install pycryptodomex && \
