--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -35,10 +35,10 @@ common_data:
       rev: dunfell
     - type: git
       url: "https://github.com/xen-troops/meta-xt-common.git"
-      rev: master
+      rev: dunfell
     - type: git
       url: "https://github.com/xen-troops/meta-xt-rcar.git"
-      rev: master
+      rev: dunfell
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
     - [SSTATE_DIR, "${TOPDIR}/../../../common_data/sstate"]
@@ -133,7 +133,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: master
+        rev: dunfell
     builder:
       type: yocto
       work_dir: "%{DOM0_BUILD_DIR}"
@@ -235,7 +235,7 @@ components:
         rev: dunfell
       - type: git
         url: "https://github.com/xen-troops/meta-xt-prod-devel-rcar.git"
-        rev: master
+        rev: dunfell
     builder:
       type: yocto
       work_dir: "%{DOMD_BUILD_DIR}"
