distro-features: Add displbe & sndbe
In case of virtio functionality, we do not need installation of the
displbe and sndbe services. Driver domain should not install and
execute those services. Control domain should not have dependencies to
those services.

This patch is intended to introduce 'displbe' and 'sndbe' ditribution
features, which allow to turn mentioned services on and off for a
specific product.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -61,6 +61,9 @@ common_data:
     # Remove features that we are not using
     - [DISTRO_FEATURES:remove, "x11 gtk gobject-introspection-data wifi nfc bluetooth irda zeroconf 3g sysvinit"]
 
+    # displbe and sndbe
+    - [DISTRO_FEATURES:append, " displbe sndbe"]
+
   # Conf options for domain that are built used renesas layer
   domd_domu_conf: &DOMD_DOMU_CONF
     - [MACHINE, "%{MACHINE}"]
