--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -786,3 +786,5 @@ parameters:
               conf:
                 # We do not need displbe & sndbe in case of virtio
                 - [DISTRO_FEATURES:remove, " displbe sndbe"]
+                # We do not need ivi-shell in case of virtio
+                - [DISTRO_FEATURES:remove, " ivi-shell"]
