--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -764,3 +764,5 @@ parameters:
               conf:
                 # We do not need displbe & sndbe in case of virtio
                 - [DISTRO_FEATURES:remove, " displbe sndbe"]
+                # We do not need ivi-shell in case of virtio
+                - [DISTRO_FEATURES:remove, " ivi-shell"]
