virtio: Introduce ENABLE_VIRTIO moulin parameter
We need a separate moulin parameter to implement builds with the virtio
devices sharing capabilities.

This patch adds first iteration of such a parameter. As of now, it does
only turn off the displbe and sndbe distro features.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -746,3 +746,21 @@ parameters:
             builder:
               env:
                 - "DDK_UM_PREBUILDS=eva/pvr-um"
+
+  ENABLE_VIRTIO:
+    desc: "Enable sharing of the virtio devices from the driver domain to the guest domain"
+    "no":
+      default: true
+    "yes":
+      overrides:
+        components:
+          dom0:
+            builder:
+              conf:
+                # We do not need displbe & sndbe in case of virtio
+                - [DISTRO_FEATURES:remove, " displbe sndbe"]
+          domd:
+            builder:
+              conf:
+                # We do not need displbe & sndbe in case of virtio
+                - [DISTRO_FEATURES:remove, " displbe sndbe"]
