domd & doma: conditional Xen config RAM assignment
Usually, in cases when Android is used, for 8 Gb RAM boards we assign
2Gb of RAM to DomD and 5Gb of RAM to DomA.

But if on top of that we are using virtio devices, we need to assign
3Gb of RAM to DomD and reduce amount of RAM on DomA to 4Gb. That is
caused by a QEMU, which is running in the DomD to provide virtio
backends. It requires additional RAM. Without this change QEMU will from
time to time crash due to the insufficient amount of memory.

This patch is replacing statically defined RAM parameters in DomD and
DomA Xen configuration files, and replaces them with the values, which
are conditionally selected by Yocto. That is done using the OVERRIDES
and MACHINEOVERRIDES mechanisms. Selected values are then injected into
the installed doma.cfg and domd.cfg files.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Reviewed-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -21,6 +21,7 @@ variables:
   XT_DOMA_SOURCE_GROUP: ""
   XT_MULTIMEDIA_EVA_DIR : ""
   XT_PREBUILT_GSX_DIR: ""
+  XT_MACHINEOVERRIDES_RAM: "mem8gb"
 common_data:
   # Sources used by all yocto-based domains
   sources: &COMMON_SOURCES
@@ -165,6 +166,8 @@ components:
 
         # Do not install kernel image to rootfs to decrease initrd size
         - ["RDEPENDS_${KERNEL_PACKAGE_NAME}-base", ""]
+
+        - [MACHINEOVERRIDES:append, ":%{XT_MACHINEOVERRIDES_RAM}"]
 
       layers:
         - "../meta-virtualization"
@@ -464,6 +467,7 @@ parameters:
           XT_OP_TEE_FLAVOUR: "salvator_m3"
           XT_DOMD_DTB_NAME: "r8a77960-%{MACHINE}-domd.dtb"
           XT_XEN_DTB_NAME: "r8a77960-%{MACHINE}-xen.dtb"
+          XT_MACHINEOVERRIDES_RAM: "mem4gb"
     salvator-xs-m3-2x4g:
       # This is not misprint. This machine has 2x4 memory config
       overrides:
@@ -556,6 +560,7 @@ parameters:
           XT_OP_TEE_FLAVOUR: "salvator_m3"
           XT_DOMD_DTB_NAME: "r8a7796-m3ulcb-domd.dtb"
           XT_XEN_DTB_NAME: "r8a7796-m3ulcb-xen.dtb"
+          XT_MACHINEOVERRIDES_RAM: "mem4gb"
 
   ENABLE_ANDROID:
     desc: "Build Android as a guest VM"
@@ -573,6 +578,10 @@ parameters:
                 - [DISTRO_FEATURES_append, " ivi-shell"]
           dom0:
             builder:
+              conf:
+                # Flag, which allows to override parameters on the Yocto level.
+                # E.g. amount of used RAM for driver domain.
+                - [OVERRIDES:append, ":enable_android"]
               additional_deps:
                 # This is not actually a hard dep. We just want to force Android build
                 - "../%{DOMA_DIR}/out/target/product/xenvm/boot.img"
@@ -781,6 +790,9 @@ parameters:
               conf:
                 # We do not need displbe & sndbe in case of virtio
                 - [DISTRO_FEATURES:remove, " displbe sndbe"]
+                # Flag, which allows to override parameters on the Yocto level.
+                # E.g. amount of used RAM for driver and guest domains.
+                - [OVERRIDES:append, ":enable_virtio"]
           domd:
             builder:
               conf:
