recipes-kernel: finish updating for Renesas BSP v5.9.0
Commit 30f9eb907d08 ("recipes-kernel: Update Linux for Renesas BSP
v5.9.0") updated part of the device trees and recipes, but not all of
them, so some of the boards was left in broken state. This commit
finishes the work by updating the following boards:

 - r8a77961-salvator-xs-2x4g (aka Salvator-XS M3W)
 - r8a77960-salvator-x-m3 (aka Salvator-X M3N)
 - r8a7796-m3ulcb (aka StarterKit Pro)
 - r8a77951-h3ulcb (aka StarterKit Premiere)

Signed-off-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>
Fixes: 30f9eb907d08 ("recipes-kernel: Update Linux for Renesas BSP
v5.9.0")
Reviewed-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com> [for Salvator-XS M3W]

--- a/meta-xt-prod-devel-rcar-driver-domain/recipes-kernel/linux/files/r8a77961-salvator-xs-2x4g-xen.dts
+++ b/meta-xt-prod-devel-rcar-driver-domain/recipes-kernel/linux/files/r8a77961-salvator-xs-2x4g-xen.dts
@@ -210,6 +210,12 @@
 		lossy_shmem {
 			reg = <0 0x47fd7000 0 0x1000>;
 		};
+		imrlx4_imr0 {
+			xen,passthrough;
+		};
+		imrlx4_imr1 {
+			xen,passthrough;
+		};
 	};
 };
 
@@ -336,10 +342,8 @@
 &i2c2			{ xen,passthrough; };
 &i2c4			{ xen,passthrough; };
 &intc_ex		{ xen,passthrough; };
-&mfis_as		{ xen,passthrough; };
 &pciec1			{ xen,passthrough; };
 &pciec0			{ xen,passthrough; };
-&rpc0			{ xen,passthrough; };
 &hscif1			{ xen,passthrough; };
 &sdhi0			{ xen,passthrough; };
 &sdhi2			{ xen,passthrough; };
