yaml: Install qemu and friends into DomD
Now with having all required changes integrated into QEMU and
meta-xt-common we can set up an environment for DomD to get a proper
thin Xen-aware qemu-system-aarch64 with required dependencies.

At the same time, this patch adjusts an environment for Dom0 according
to the recent QEMU and meta-xt-common changes.

Signed-off-by: Vladyslav Goncharuk <vladyslav_goncharuk@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -793,6 +793,13 @@ parameters:
                 # Flag, which allows to override parameters on the Yocto level.
                 # E.g. amount of used RAM for driver and guest domains.
                 - [OVERRIDES:append, ":enable_virtio"]
+                # QEMU configuration
+                - [QEMUVERSION, "7.0%"]
+                # Enable related distro-feautre in order to create conditions in Yocto recipes
+                - [DISTRO_FEATURES:append, " enable_virtio"]
+                - [DISTRO_FEATURES:append, " xen vmsep"]
+              layers:
+                - "../meta-xt-common/meta-xt-qemu"
           domd:
             builder:
               conf:
@@ -800,3 +807,10 @@ parameters:
                 - [DISTRO_FEATURES:remove, " displbe sndbe"]
                 # We do not need ivi-shell in case of virtio
                 - [DISTRO_FEATURES:remove, " ivi-shell"]
+                # Enable xen-virtio distro feature
+                - [DISTRO_FEATURES:append, " enable_virtio"]
+                # QEMU-related configuration
+                - [DISTRO_FEATURES:append, " xen vmsep"]
+                - [QEMUVERSION, "7.0%"]
+              layers:
+                - "../meta-xt-common/meta-xt-qemu"
