--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -6,12 +6,15 @@ variables:
   DOM0_BUILD_DIR: "build-dom0"
   DOMD_BUILD_DIR: "build-domd"
   DOMU_BUILD_DIR: "build-domu"
+  DOM0_MACHINE: "generic-armv8-xt"
+  DOMD_MACHINE: "%{MACHINE}"
+  DOMU_MACHINE: "virtio-armv8-xt"
   ANDROID_KERNEL_DIR: "android_kernel"
   DOMA_DIR: "android"
   DOMZ_DIR: "zephyr"
-  XT_DOMD_DTB_NAME: "%{SOC_FAMILY}-%{MACHINE}-domd.dtb"
+  XT_DOMD_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-domd.dtb"
   XT_DOMA_DTB_NAME: "salvator-generic-doma.dtb"
-  XT_XEN_DTB_NAME: "%{SOC_FAMILY}-%{MACHINE}-xen.dtb"
+  XT_XEN_DTB_NAME: "%{SOC_FAMILY}-%{DOMD_MACHINE}-xen.dtb"
   XT_PVR_NUM_OSID: "2"
   XT_OP_TEE_FLAVOUR: "generic_dt"
   XT_GENERIC_DOMU_TAG: ""
@@ -129,7 +132,7 @@ components:
       work_dir: "%{DOM0_BUILD_DIR}"
       conf:
         - *COMMON_CONF
-        - [MACHINE, "generic-armv8-xt"]
+        - [MACHINE, "%{DOM0_MACHINE}"]
         - [XT_DOMD_CONFIG_NAME, "%{XT_DOMD_CONFIG_NAME}"]
         - [XT_DOMU_CONFIG_NAME, "%{XT_DOMU_CONFIG_NAME}"]
         - [XT_DOMA_CONFIG_NAME, "%{XT_DOMA_CONFIG_NAME}"]
@@ -183,9 +186,9 @@ components:
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-control"
       build_target: core-image-thin-initramfs
       external_src:
-        domd: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/"
+        domd: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/"
       additional_deps:
-        - "%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/Image"
+        - "%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/Image"
       target_images:
         - "tmp/deploy/images/generic-armv8-xt/Image"
         - "tmp/deploy/images/generic-armv8-xt/uInitramfs"
@@ -232,7 +235,7 @@ components:
         - [BBMASK:append, " ${@bb.utils.contains('XT_USE_DDK1_11', '1', '', 'meta-xt-rcar-fixups/recipes-graphics/gles-module/gles-user-module.bbappend', d)}"]
         - [BBMASK:append, " ${@bb.utils.contains('XT_USE_DDK1_11', '1', '', 'meta-xt-rcar-fixups/recipes-graphics/packagegroups/packagegroup-graphic-renesas.bbappend', d)}"]
 
-        - [MACHINE, "%{MACHINE}"]
+        - [MACHINE, "%{DOMD_MACHINE}"]
         - [XT_DOM_NAME, "domd"]
         - [XT_OP_TEE_FLAVOUR, "%{XT_OP_TEE_FLAVOUR}"]
         - [XT_DEVICE_TREES, "%{XT_DOMD_DTB_NAME} %{XT_DOMA_DTB_NAME} %{XT_XEN_DTB_NAME}"]
@@ -280,11 +283,11 @@ components:
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
         - "../meta-xt-prod-devel-rcar/meta-xt-domd-gen3"
       target_images:
-        - "tmp/deploy/images/%{MACHINE}/Image"
-        - "tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}.uImage"
-        - "tmp/deploy/images/%{MACHINE}/xenpolicy-%{MACHINE}"
-        - "tmp/deploy/images/%{MACHINE}/%{XT_XEN_DTB_NAME}"
-        - "tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/Image"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/xen-%{DOMD_MACHINE}.uImage"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/xenpolicy-%{DOMD_MACHINE}"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/%{XT_XEN_DTB_NAME}"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/core-image-weston-%{DOMD_MACHINE}.ext4"
 
   domu:
     build-dir: "%{YOCTOS_WORK_DIR}"
@@ -299,7 +302,7 @@ components:
       conf:
         - *COMMON_CONF
         - *DOMD_DOMU_CONF
-        - [MACHINE, "virtio-armv8-xt"]
+        - [MACHINE, "%{DOMU_MACHINE}"]
         - [XT_DOM_NAME, "domu"]
         - [EXTRA_IMAGEDEPENDS:remove, "arm-trusted-firmware"]
         - [EXTRA_IMAGEDEPENDS:remove, "optee-os"]
@@ -315,8 +318,8 @@ components:
         - "../meta-xt-prod-devel-rcar/meta-xt-domu-gen3"
       build_target: core-image-weston
       target_images:
-        - "tmp/deploy/images/%{MACHINE}/Image"
-        - "tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+        - "tmp/deploy/images/%{DOMU_MACHINE}/Image"
+        - "tmp/deploy/images/%{DOMU_MACHINE}/core-image-weston-%{DOMU_MACHINE}.ext4"
 
   doma_kernel:
     build-dir: "%{ANDROID_KERNEL_DIR}"
@@ -383,23 +386,23 @@ components:
     build-dir: "."
     builder:
       type: archive
-      base_dir: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/firmware/"
-      name: "ipl-%{MACHINE}.tar.bz2"
+      base_dir: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/firmware/"
+      name: "ipl-%{DOMD_MACHINE}.tar.bz2"
       items:
-        - "bl2-%{MACHINE}-4x2g.bin"
-        - "bl2-%{MACHINE}-4x2g.srec"
-        - "bl31-%{MACHINE}-4x2g.bin"
-        - "bl31-%{MACHINE}-4x2g.srec"
+        - "bl2-%{DOMD_MACHINE}-4x2g.bin"
+        - "bl2-%{DOMD_MACHINE}-4x2g.srec"
+        - "bl31-%{DOMD_MACHINE}-4x2g.bin"
+        - "bl31-%{DOMD_MACHINE}-4x2g.srec"
         - "bootparam_sa0-4x2g.bin"
         - "bootparam_sa0-4x2g.srec"
         - "cert_header_sa6-4x2g.bin"
         - "cert_header_sa6-4x2g.srec"
         - "cert_header_sa6_emmc.bin"
         - "cert_header_sa6_emmc.srec"
-        - "tee-%{MACHINE}.bin"
-        - "tee-%{MACHINE}.srec"
-        - "u-boot-elf-%{MACHINE}.srec"
-        - "u-boot-%{MACHINE}.bin"
+        - "tee-%{DOMD_MACHINE}.bin"
+        - "tee-%{DOMD_MACHINE}.srec"
+        - "u-boot-elf-%{DOMD_MACHINE}.srec"
+        - "u-boot-%{DOMD_MACHINE}.bin"
 
 images:
   full:
@@ -413,13 +416,13 @@ images:
         items:
           "Image": "%{YOCTOS_WORK_DIR}/%{DOM0_BUILD_DIR}/tmp/deploy/images/generic-armv8-xt/Image"
           "uInitramfs": "%{YOCTOS_WORK_DIR}/%{DOM0_BUILD_DIR}/tmp/deploy/images/generic-armv8-xt/uInitramfs"
-          "xen": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}.uImage"
-          "xenpolicy": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/xenpolicy-%{MACHINE}"
-          "xen.dtb": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/%{XT_XEN_DTB_NAME}"
+          "xen": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/xen-%{DOMD_MACHINE}.uImage"
+          "xenpolicy": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/xenpolicy-%{DOMD_MACHINE}"
+          "xen.dtb": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/%{XT_XEN_DTB_NAME}"
       domd_rootfs:
         gpt_type: B921B045-1DF0-41C3-AF44-4C6F280D3FAE # Linux aarch64 root
         type: raw_image
-        image_path: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+        image_path: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/core-image-weston-%{DOMD_MACHINE}.ext4"
 
 parameters:
   # Machines
@@ -527,7 +530,7 @@ parameters:
                 - "../%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/boot.img"
               external_src:
                 # Android uses DTB generated by DomD
-                doma: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/"
+                doma: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/"
         images:
           android_only: &ANDROID_IMAGE
             desc: "Android sub-image (this image is passed to Android VM as a separate block device)"
@@ -609,16 +612,16 @@ parameters:
           dom0:
             builder:
               additional_deps:
-                - "%{DOMU_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/Image"
+                - "%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/Image"
               external_src:
-                domu: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/"
+                domu: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/"
         images:
           full:
             partitions:
               domu-rootfs:
                 type: raw_image
                 gpt_type: 0FC63DAF-8483-4772-8E79-3D69D8477DE4 # Linux filesystem data
-                image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/core-image-weston-%{MACHINE}.ext4"
+                image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/core-image-weston-%{DOMU_MACHINE}.ext4"
 
   ENABLE_ZEPHYR:
     desc: "Build Zephyr as guest domain"
